Update SuppliersTest.java